objects/Yash_ARM_Training__c.object
<CustomObject>
    <description>This is a custom object created to test the functionality of the Commit Labels</description>
    <fields>
        <fullName>Deployment_Module__c</fullName>
        <description>Sample Description: That describes about the Deployment Module</description>
        <label>Deployment Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENV_Test__c</fullName>
        <label>ENV Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VC_Module__c</fullName>
        <description>Sample Description:</description>
        <label>VC Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Yash ARM Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Yash ARM Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yash ARM Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>